# tetris

./: .gitignore  CMakeLists.txt  README.md  game.py  main.py  main.qml  playfield.py  tetrion.py  tetris.pyproject  tetromino.py
backend/headers/: FileError.h  GhostTetromino.h  Key.h  KeyEvent.h  KeyboardEventHandler.h  MediaPlayer.h  Playfield.h  Settings.h  block.h  gameboard.h  index.h  playfield.h  position.h  tetrion.h  tetrisboard.h  tetromino.h
backend/src/: FileError.cpp  GhostTetromino.cpp  KeyboardEventHandler.cpp  MediaPlayer.cpp  Playfield.cpp  block.cpp  index.cpp  main.cpp  playfield.cpp  position.cpp  tetrion.cpp  tetrisboard.cpp  tetromino.cpp
design/: ROADMAP.md  subsystem-interactions.drawio
frontend/: CircularProgressBar.qml  CustomCheckBox.qml  GameOverDialog.qml  GameOverMenu.qml  InfoDisplay.qml  Level.qml  Line.qml  Main.qml  MainMenu.qml  NextTetrominoDisplay.qml  NextTetrominoPanel.qml  OptionsWindow.qml  PauseMenu.qml  Playfield.qml  SettingsMenu.qml  TetrisBoard.qml  TextButton.qml  main.qml
src/: color.py  main.py  playfield.py  tetrion.py  tetromino.py
test/: CMakeLists.txt
test/backend/src/: blocktest.cpp  gameboardtest.cpp
